[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ispw-mcp-server"
version = "1.0.0"
description = "MCP server for BMC Compuware ISPW - mainframe DevOps source code management and deployment automation"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0"
]

[project.scripts]
ispw-mcp-server = "ispw_mcp_server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
